--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"roll": "git add . && git commit -m 'update'; npm version patch && npm publish && git push"
   },
   "keywords": [],
   "author": "",
