--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "@sahil/logger",
+  "name": "sahilrajput03-logger",
   "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "roll": "git add . && git commit -m 'update'; npm version patch && npm publish && git push"
   },
   "keywords": [],
