--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "sahilrajput03-logger",
-  "version": "1.0.3",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "roll": "git add . && git commit -m 'update'; npm version patch && npm publish && git push"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "chalk": "^4.1.2",
-    "colors": "^1.4.0"
-  }
+	"name": "sahilrajput03-logger",
+	"version": "1.0.3",
+	"description": "",
+	"main": "lib/index.js",
+	"scripts": {
+		"roll": "git add . && git commit -m 'update'; npm version patch && npm publish && git push"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"chalk": "^4.1.2",
+		"colors": "^1.4.0"
+	}
 }
